src/test/ui/suggestions/issue-52049.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-52049.rs:16:10
   |
LL |     foo(&unpromotable(5u32));
   |          ^^^^^^^^^^^^^^^^^^ - temporary value only lives until here
   |          |
   |          temporary value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
